------------------------------------------------------------------------------
This file is used to record changes made to the CVS database. Please add to
the top of this file before committing any changes.

Al
------------------------------------------------------------------------------
Wed Jul 14 18:28 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Update and recode of direct console driver, adding more ansi
	  support, and BEL, by Greg Haerr.

Wed Jul 14 18:21 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Change to chq_peekch() which fixes select() behavoir for zero
	  bytes.

Wed Jul 14 18:21 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Fix to sched.[ch] which was messing up .o file sizes by Greg Haerr.

Wed Jul 14 18:17 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Updates to memory allocation code by Greg Haerr which fixes
	  environment truncation and brk() bug.

Fri Jul 09 17:00 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Major updates to socket code. Addition of server socket capability,
	  and addition of unix domain socket code (currently no functional),
	  plus nano sockets.

Fri Jul 09 16:59 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Late commit of changes for version 0.0.77 due to cvs outage.

Fri Jul 09 16:54 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Added support for very basic pseudo ttys. Initially to
	  support terminal program for nano-X.

Fri Jul 09 16:21 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Make exit send a SIGCHLD to parent.

Fri Jul 09 16:21 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Fixed the way the kernel handles loading sh if no init is found

Fri Jul 09 16:15 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Updated signal code to make it clearer.

Fri Jul 09 16:10 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>

	* Updated romfs to use byteorder functions.

Fri Jul 09 15:45 BST 1999   Alistair Riddoch  <ajr@ecs.soton.ac.uk>
